--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -9,6 +9,13 @@ android {
     namespace = "com.example.recipe_app"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
+    dependencies {
+        // Annotations used by Tink and other libraries
+        implementation 'com.google.code.findbugs:jsr305:3.0.2'
+        implementation 'com.google.errorprone:error_prone_annotations:2.18.0'
+        implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    }
+
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
