--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,13 +36,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_native_splash: ^2.4.3
-  go_router: ^14.6.1
+  go_router: ^14.6.2
   shared_preferences: ^2.3.3
   image_picker: ^1.1.2
   flutter_svg: ^2.0.16
   flutter_screenutil: ^5.9.3
   flutter_secure_storage: ^9.2.2
   dio: ^5.7.0
+  http: ^1.2.2
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
@@ -60,22 +62,19 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
-  uses-material-design: true
   assets:
     - assets/
     - assets/icons/
     - assets/images/
-    - assets/images/cuisines/
-    - assets/images/allergic/
     - assets/images/onboarding/
     - assets/images/chefs/
     - assets/images/your_recipes/
     - assets/images/trending/
     - assets/images/recents/
+
+  uses-material-design: true
+
+
   fonts:
     - family: Poppins
       fonts:
@@ -85,8 +84,8 @@ flutter:
           weight: 500
         - asset: fonts/Poppins/Poppins-Medium.ttf
           weight: 300
-    - family: League Spartan
 
+    - family: League Spartan
       fonts:
         - asset: fonts/LeagueSpartan/LeagueSpartan-Light.ttf
           weight: 100
